# rpc

./: .clang-format  .gitignore  CMakeLists.txt  README.org
client/: CMakeLists.txt  generator.hpp  main.cpp
client/include/: generator.hpp  network.hpp
test/: CMakeLists.txt  database_test.cpp  serialization_test.cpp
utils/: CMakeLists.txt
utils/include/: daemonize.hpp  misc.hpp  network.hpp  signal.hpp  socket.hpp
